projects/vb6parse/snapshots/tests/library/file/fileattr/fileattr_boolean_expression.snap
---
source: projects/vb6parse/tests/library/file/fileattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: isOpen
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: ParenthesizedExpression
              children:
                - kind: LeftParenthesis
                  text: (
                - kind: BinaryExpression
                  children:
                    - kind: MemberAccessExpression
                      children:
                        - kind: Identifier
                          text: Err
                        - kind: PeriodOperator
                          text: "."
                        - kind: Identifier
                          text: Number
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "0"
                - kind: RightParenthesis
                  text: )
            - kind: Whitespace
              text: " "
            - kind: AndKeyword
              text: And
            - kind: Whitespace
              text: " "
            - kind: ParenthesizedExpression
              children:
                - kind: LeftParenthesis
                  text: (
                - kind: BinaryExpression
                  children:
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: FileAttr
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: fileNum
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "1"
                        - kind: RightParenthesis
                          text: )
                    - kind: Whitespace
                      text: " "
                    - kind: GreaterThanOperator
                      text: ">"
                    - kind: Whitespace
                      text: " "
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "0"
                - kind: RightParenthesis
                  text: )
        - kind: Newline
          text: "\n"
